<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/charcoal"
    android:fitsSystemWindows="true">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/StopwatchTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_stopwatch" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/label_menu"
            android:padding="@dimen/_16dp"
            android:src="@drawable/ic_more"
            app:tint="@color/white" />
    </androidx.appcompat.widget.Toolbar>

    <!-- Custom Chronometer -->
    <com.chronometer.presentation.view.CustomChronometerView
        android:id="@+id/custom_chronometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <!-- Buttons Container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_start"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_chronometer">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <!-- Lap Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_lap"
            style="@style/StopwatchButtonStyle"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_4dp"
            android:text="@string/label_lap"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Reset Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reset"
            style="@style/StopwatchButtonStyle"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_4dp"
            android:text="@string/label_reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Start Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_start"
            style="@style/StopwatchButtonStyle"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4dp"
            android:text="@string/label_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- RecyclerView for Laps -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_lap"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_marginBottom="@dimen/_4dp"
        app:layout_constraintBottom_toTopOf="@id/btn_bottom_start"
        app:layout_constraintTop_toBottomOf="@id/cl_start" />

    <!-- Bottom Start Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_bottom_start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp"
        android:layout_marginHorizontal="@dimen/_40dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:background="@color/off_white"
        android:text="@string/label_start"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
